# PDF_Signer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  docker-compose.yml
.github/workflows/: pages.yml  release.yml
backend/: Dockerfile  api_server.spec  errors.py  main.py  requirements.txt
backend/api/: document.py  export.py  history.py  signatures.py
backend/services/: composer.py  history_service.py  pdf_service.py  pdf_writer.py  signature_service.py
backend/tests/: conftest.py  test_api.py  test_delete_pages.py  test_export_image.py  test_export_security.py  test_export_validation.py  test_history.py  test_jitter.py  test_limits.py  test_signature_bg.py  test_signature_rename.py
docs/: DEVELOPMENT.en.md  DEVELOPMENT.ru.md  README.md
frontend/: eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  constants.js  index.css
frontend/src/components/: AboutModal.jsx  CanvasEditor.jsx  DocumentViewer.jsx  HistoryModal.jsx  SignatureItem.jsx  SignatureLibrary.jsx
frontend/src/hooks/: useCanvas.js  useDocument.js  useExport.js  useHistory.js  useSignatures.js  useSigningHistory.js
frontend/src/hooks/__tests__/: useCanvas.test.js  useHistory.test.js
frontend/src/i18n/locales/: en.js  ru.js
frontend/src/lib/: exportPayload.js
frontend/src/lib/__tests__/: exportPayload.test.js
landing/: CNAME  index.html  llms.txt  robots.txt  sitemap.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
