[package]
name = "pdf-signer"
version = "1.1.0"
description = "PDF Signer — offline handwritten signature tool"
authors = ["TinaUma"]
edition = "2021"

[lib]
name = "pdf_signer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pdf-signer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-sidecar"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
